--- a/source/partials/header.erb
+++ b/source/partials/header.erb
@@ -1,15 +1,15 @@
 <header class="main-header">
     <div class="grid">
-        <div class="logo"><img src="/assets/img/logo.svg" alt="Datica Logo"></div>
+        <div class="logo"><img src="/assets/img/logo.svg" alt="Postie Logo"></div>
         <nav>
-            <a href="//datica.com">Datica Home</a>
-            <a href="//datica.com/about-us">About</a>
+            <a href="//Postie.com">Postie Home</a>
+            <a href="//Postie.com/about-us">About</a>
         </nav>
     </div>
 </header>
 <header class="sub-header">
     <div class="grid">
-        <h1 class="site-title">Datica Compliance</h1>
+        <h1 class="site-title">Postie Compliance</h1>
         <a class="up-next" href="/#/">&gt; Policy Docs</a>
         <% if current_page.data.search %>
         <div class="search">
