Postie Specific buildout.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -4,21 +4,15 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <!-- Set title to current page title -->
-        <title><%= current_page.data.title || "Postie HIPAA Docs" %></title>
-        <meta name="description" content="Our company is built with information security and compliance at its core. Our policies, procedures, and technology go above and beyond HIPAA compliance to ensure our users' data, and their users' data, is secure. We take HIPAA compliance seriously because we believe it is the right thing to do.">
+        <title><%= current_page.data.title || "Postie Policy Docs" %></title>
+        <meta name="description" content="">
         <!-- Set keyword content to current post keywords data -->
         <meta name="keywords" content="HIPAA, Security, Compliance, Software, Infrastructure, Documentation">
-        <meta property="og:description" content="Our company is built with information security and compliance at its core. Our policies, procedures, and technology go above and beyond HIPAA compliance to ensure our users' data, and their users' data, is secure. We take HIPAA compliance seriously because we believe it is the right thing to do.">
-        <meta property="og:title" content="Postie HIPAA Compliance" />
+        <meta property="og:description" content="">
+        <meta property="og:title" content="Postie Compliance" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://policy.Postie.io" />
-        <meta property="og:image" content="/assets/img/logo.svg" />
         <meta property="og:locale" content="en_US">
-        <meta property="twitter:card" content="summary" />
-        <meta property="twitter:site" content="@Postiehealth" />
-        <meta property="twitter:title" content="Postie HIPAA Docs" />
-        <meta property="twitter:description" content="Our company is built with information security and compliance at its core. Our policies, procedures, and technology go above and beyond HIPAA compliance to ensure our users' data, and their users' data, is secure. We take HIPAA compliance seriously because we believe it is the right thing to do." />
-        <meta property="twitter:image" content="/assets/img/logo.svg" />
         <!-- Icons -->
         <link href="/assets/img/favicon.ico" rel="icon" type="image/png" />
         <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
