--- a/source/partials/header.erb
+++ b/source/partials/header.erb
@@ -1,9 +1,8 @@
 <header class="main-header">
     <div class="grid">
-        <div class="logo"><img src="/assets/img/logo.svg" alt="Postie Logo"></div>
+        <div class="logo"></div>
         <nav>
             <a href="//Postie.com">Postie Home</a>
-            <a href="//Postie.com/about-us">About</a>
         </nav>
     </div>
 </header>
@@ -12,9 +11,6 @@
         <h1 class="site-title">Postie Compliance</h1>
         <a class="up-next" href="/#/">&gt; Policy Docs</a>
         <% if current_page.data.search %>
-        <div class="search">
-            <span class="icon"><img src="/assets/img/icons/search.png" alt="Search Icon"></span>
-        </div>
         <% end %>
     </div>
 </header>
