--- a/source/partials/product-navigation.erb
+++ b/source/partials/product-navigation.erb
@@ -1,7 +1,7 @@
 <section class="product-navigation">
-	<a href="//Postie.com/compliance" class="left">&lsaquo;</a>
+	<a href="//policy.postie.com/compliance" class="left">&lsaquo;</a>
 	<span class="span-left">Compliance Home</span>
-	<span class="quote">&copy; Postie, Inc. 2015</span>
-	<a href="//policy.Postie.com" class="right">&rsaquo;</a>
+	<span class="quote">&copy; Postie, Inc. 2017</span>
+	<a href="//policy.postie.com" class="right">&rsaquo;</a>
 	<span class="span-right">Open Source Policies</span>
 </section>
